--- a/SensU/res/layout/layout_one.xml
+++ b/SensU/res/layout/layout_one.xml
@@ -1,10 +1,9 @@
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-  
-   android:background="@drawable/n4"
-    
+
+    android:background="@drawable/n4"
+
     >
 
     <ImageView
@@ -26,8 +25,7 @@
         android:text="@string/app_subtitle"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/white"
-        android:textSize="25dp"
-         />
+        android:textSize="25dp" />
 
     <TextView
         android:id="@+id/textView1"
