--- a/SensU/res/layout/layout_two.xml
+++ b/SensU/res/layout/layout_two.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-   android:background="@drawable/n4"
-   android:orientation="vertical"
-  >
+    android:background="@drawable/n4"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
@@ -35,11 +33,10 @@
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="42dp"
         android:fontFamily="serif"
+        android:gravity="center_horizontal"
         android:text="@string/pickup_mode_details"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
-        android:textSize="20dip"
-        android:gravity="center_horizontal"
-         />
+        android:textSize="20dip" />
 
 </RelativeLayout>
