--- a/SensU/res/layout/activity_main.xml
+++ b/SensU/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="wrap_content"
@@ -9,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.appFactory.SensU.MainActivity" >
+    tools:context="com.appFactory.SensU.MainActivity">
 
     <ToggleButton
         android:id="@+id/Magic_mode"
@@ -26,8 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/View02"
-        android:layout_alignLeft="@+id/Pick_Up"
-        />
+        android:layout_alignLeft="@+id/Pick_Up" />
 
     <TextView
         android:id="@+id/textView1"
