--- a/SensU/res/layout/layout_three.xml
+++ b/SensU/res/layout/layout_three.xml
@@ -3,18 +3,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/n4"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:fontFamily="serif"
         android:text="@string/pocket_mode"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
-                android:layout_centerHorizontal="true"
-        
+
         android:textSize="30dip" />
 
     <ImageView
@@ -33,11 +33,10 @@
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="32dp"
         android:fontFamily="serif"
+        android:gravity="center_horizontal"
         android:text="@string/pocket_mode_details"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/white"
-        android:textSize="20dip"
-        android:gravity="center_horizontal"
-         />
+        android:textSize="20dip" />
 
 </RelativeLayout>
