--- a/SensU/res/layout/main.xml
+++ b/SensU/res/layout/main.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white"
-    android:orientation="vertical" 
     android:layout_gravity="center"
-    >
+    android:background="@color/white"
+    android:orientation="vertical">
     <!-- ViewPager -->
     <android.support.v4.view.ViewPager
-    android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:id="@+id/viewPager" />
-  <!-- Footer -->
-  <include layout="@layout/footer"  /> 
+        android:id="@+id/viewPager"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
+    <!-- Footer -->
+    <include layout="@layout/footer" />
 </FrameLayout>
