--- a/SensU/res/menu/main.xml
+++ b/SensU/res/menu/main.xml
@@ -1,12 +1,14 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-     <item android:id="@+id/action_share"
-          android:icon="@drawable/share"
-          android:title="@string/action_share"
-          android:showAsAction="always" />
-  <item android:id="@+id/action_rate"
-          android:icon="@drawable/rate"
-          android:title="@string/action_rate"
-          android:showAsAction="always" />
+    <item
+        android:id="@+id/action_share"
+        android:icon="@drawable/share"
+        android:showAsAction="always"
+        android:title="@string/action_share" />
+    <item
+        android:id="@+id/action_rate"
+        android:icon="@drawable/rate"
+        android:showAsAction="always"
+        android:title="@string/action_rate" />
 
 </menu>
